[package]
name = "crypto-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.27"
colored    = "2"